# multilayer_perceptron

./: .gitignore  CMakeLists.txt  README.md  README21.md  datos_sinteticos.txt  main.py  perceptron_muticapa.cpp  perceptron_simple.cpp  percetromulticapa  percetronsimple  predicciones.csv  prueba.cpp  resultados.txt  run.sh  test
data/: mnist_adam_log.csv  mnist_rmsprop_log.csv  mnist_sgd_log.csv
img/graph/: mnist_train_20epochs_RMS.csv  mnist_train_20epochs_adam.csv  mnist_train_20epochs_sgd.csv
img/matrix/: mnist_adam_decay_log.csv  mnist_rmsprop_decay_log.csv  mnist_rmsprop_log.csv  mnist_sgd_log.csv
include/: ActivationFunction.hpp  Activations.hpp  MNISTDataset.hpp  layers.hpp  neuron.hpp  perceptron.hpp
models/: d
src/: MNISTDataset.cpp  layers.cpp  main.cpp  neuron.cpp  perceptron.cpp
tests/: labe_generator.py  main.py  main2.py  mlp_optimized  mlp_parallel  mlp_parallel2  mlp_parallel3  mlp_perceptron  mnist_adam_log.csv  mnist_sgd_decay_log.csv  mnist_train_10epochs.csv  mnist_train_15epoch.csv  mnist_train_15epochs.csv  mnist_train_20epochs_RMS.csv  mnist_train_20epochs_adam.csv  mnist_train_20epochs_adam_decay.csv  mnist_train_20epochs_sgd.csv  mnist_train_30epoch copy.csv  mnist_train_7epoch.csv  perceptron_muticapa.cpp  perceptron_simple.cpp  proof  proof.cpp  prueba copy.cpp  prueba.cpp  prueba2  prueba2.cpp  prueba3  prueba3.cpp  refactor2  refactorizado.cpp  refactorizado_copy.cpp  train-images.idx3-ubyte  train-labels.idx1-ubyte  training_log.csv  training_metrics.csv
